--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@
     padding: 0;
 }
 
+body{
+    background-image: url("Images/background.jpg");
+    background-position: center;
+    background-size:cover;
+    background-repeat: no-repeat;
+     
+}
+
 /* For Desktop View */
 @media screen and (min-width: 1024px) {
     
